Added swagger for directors
