# app/static/swagger.json
@@ -10,6 +10,24 @@
   },
   "host": "172.20.0.3:5000",
   "basePath": "/",
+  "tags": [
+        {
+          "name": "Users",
+          "description": "API for User"
+        },
+        {
+          "name": "Directors",
+          "description": "API for Directors"
+        },
+        {
+          "name": "Genres",
+          "description": "API for Genre"
+        },
+        {
+          "name": "Films",
+          "description": "API for Film"
+        }
+  ],
   "schemes": [
     "http"
   ],
@@ -18,10 +36,13 @@
       "post": {
         "summary": "API Endpoint for create User",
         "description": "Create new User in database",
+        "tags": [
+                    "Users"
+                ],
         "parameters": [
           {
             "name": "user",
-            "description": "User params to regitser new user",
+            "description": "User params to register new user",
             "in": "body",
             "schema" : {
                   "$ref" : "#definitions/User"
@@ -31,9 +52,122 @@
         "responses": {
           "200": {
             "description": "New user has Created"
+          },
+          "405": {
+            "description": "This data already exists"
+          },
+          "401": {
+            "description": "Incorrect data"
           }
         }
       }
-    }
+    },
+     "/directors": {
+            "get": {
+                "responses": {
+                    "200": {
+                        "description": "Success"
+                    }
+                },
+                "summary": "Get directors",
+                "description": ":return: Response",
+                "tags": [
+                    "Directors"
+                ]
+            },
+            "post": {
+                "summary": "API Endpoint for create Director by admin",
+                "description": "Create new Director by admin",
+                "tags": [
+                            "Directors"
+                        ],
+                "parameters": [
+                  {
+                    "name": "director",
+                    "description": "Director params for director",
+                    "in": "body",
+                    "schema" : {
+                          "$ref" : "#definitions/Director"
+                        }
+                  }
+                ],
+                "responses": {
+                  "200": {
+                    "description": "New user has Created"
+                  },
+                  "401": {
+                    "description": "User is not admin"
+                  }
+                }
+            }
+        },
+    "/directors/{director_id}": {
+            "parameters": [
+                {
+                    "name": "director_id",
+                    "in": "path",
+                    "required": true,
+                    "type": "integer"
+                }
+            ],
+            "delete": {
+                "responses": {
+                    "200": {
+                        "description": "Success"
+                    },
+                    "404": {
+                        "description": "Not found"
+                    },
+                    "401": {
+                        "description": "User is not admin"
+                    }
+                },
+                "summary": "Delete director",
+                "description": ":param director_id: id of director\n:return: Response",
+                "tags": [
+                    "Directors"
+                ]
+            },
+            "patch": {
+              "parameters": [
+                  {
+                    "name": "director",
+                    "description": "Director params for director",
+                    "in": "body",
+                    "schema" : {
+                          "$ref" : "#definitions/Director"
+                        }
+                  }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success"
+                    },
+                    "404": {
+                        "description": "Not found"
+                    },
+                    "401": {
+                        "description": "Not authorized"
+                    }
+                },
+                "summary": "Updates a director",
+                "description": ":param director_id: id of director\n:return: JSON",
+                "tags": [
+                    "Directors"
+                ]
+            },
+            "get": {
+                "responses": {
+                    "200": {
+                        "description": "Success"
+                    }
+                },
+                "summary": "Get one director",
+                "description": ":param director_id: id of director\n:return: JSON",
+                "tags": [
+                    "Directors"
+                ]
+            }
+        }
   }
 }
